<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LMH</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="retweeted">Retweeted By LMH JCR</string>
    <string name="started">Started</string>
    <string name="username">Username</string>
    <string name="r">R</string>
    <string name="account_balance">Account Balance: </string>
    <string name="password">Password</string>
    <string name="katie_lee">Katie Lee</string>
    <string name="pound">£</string>
    <string name="save">SAVE</string>
    <string name="screen_name">Screen Name</string>
    <string name="g">G</string>
    <string name="meal">Meal</string>
    <string name="show_password">Show Password</string>
    <string name="washer">Washer</string>
    <string name="token_balance">Token Balance: </string>
    <string name="handle">handle__</string>
    <string name="new_old_hall">New Old Hall</string>
    <string name="b">B</string>
    <string name="notifications">Notifications</string>
    <string name="last_updated">Last Updated: </string>
    <string name="on_for">On For(ms): </string>
    <string name="talbot">Talbot</string>
    <string name="time_zero">00:00 01/01/70 </string>
    <string name="never_updated">Never</string>
    <string name="vibration">Vibration</string>
    <string name="notificationSound">Notification Sound</string>
    <string name="LEDText">LED Colour</string>
    <string name="off_for">Off For(ms): </string>
    <string name="one_thousand">1000</string>
    <string name="title">LMH</string>
    <string name="minutes">Minutes</string>
    <string-array name="options">
        <item>Home</item>
        <item>Laundry View</item>
        <item>Battels</item>
        <item>EPOS Account</item>
        <item>Formal</item>
        <item>Meal Menu</item>
        <item>Settings</item>
    </string-array>
    <string-array name="vibrations">
        <item>1 buzz</item>
        <item>2 buzz</item>
        <item>3 buzz</item>
        <item>Custom</item>
    </string-array>
    <string name="SSOLogin">SSO Login Settings</string>
    <string name="buzz1">0,600</string>
    <string name="buzz2">0,300,100,300</string>
    <string name="buzz3">0,250,100,250,100,250</string>
    <string name="changeCustom">Change Custom</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string-array name="iconNames">
        <item>ic_home</item>
        <item>ic_laundry</item>
        <item>ic_coins</item>
        <item>ic_payment</item>
        <item>ic_formal</item>
        <item>ic_meal_menu</item>
        <item>ic_settings</item>
    </string-array>
    <string name="mealChoiceText">Get notifications for:</string>
    <string name="notificationTimeText">Notification time</string>
    <string name="notificationTimeText2">mins</string>
    <string-array name="settings">
        <item>SSO Login Details</item>
        <item>Login Details</item>
        <item>Notification Settings</item>
        <item>Notifications</item>
        <item>Vibration</item>
        <item>Notification Sound</item>
        <item>LED Colour</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Notify Time</item>
        <item>Other Settings</item>
        <item>Refresh Time</item>
        <item>Set Wallpaper</item>
    </string-array>
    <string-array name="refreshTimeChoices">
        <item>30 Minutes</item>
        <item> 1 Hour</item>
        <item>2 Hours</item>
        <item>4 Hours</item>
        <item>6 Hours</item>
        <item>12 Hours</item>
        <item> 1 Day</item>
        <item>Never</item>
    </string-array>
    <string name="font_family_subhead_material">sans-serif</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="refresh">Refresh</string>
    <string name="led_colour_preview">LED Colour Creview</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="proportion_left">Proportion Left</string>
    <string name="user_graphic">User Graphic</string>
    <string name="tweeted_image">Tweeted Image</string>
    <string name="nothingToShow">There isn\'t anything to display.</string>
    <string name="somethingWentWrong"> Something went wrong.</string>
    <dimen name="text_size_body_1_material">14sp</dimen>
    <string name ="wallpaper_description">I can\'t think of a good description.</string>
    <string name="show_the_people_going">Show the people going</string>
</resources>
