<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/started"
        android:textColor="@color/abc_search_url_text_holo"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/AccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Status"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/account_balance"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/AccountBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AccountTitle"
        android:layout_toRightOf="@+id/AccountTitle"
        android:gravity="left"
        android:text="@string/pound"
        android:textSize="20sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/TokenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AccountBalance"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/token_balance"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/TokenBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/AccountBalance"
        android:layout_below="@+id/TokenTitle"
        android:gravity="left"
        android:text="£"
        android:textSize="20sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/DateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TokenBalance"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/last_updated"
        android:textSize="20sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        />

    <TextView
        android:id="@+id/DateBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DateTitle"
        android:layout_toRightOf="@id/DateTitle"
        android:gravity="left"
        android:text="@string/never_updated"
        android:textSize="16sp"
        android:textStyle="normal"
        android:freezesText="true"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:id="@+id/transactionsListView"
        android:layout_below="@+id/DateTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>