<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="4dp">


    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:id="@+id/saveButton"
        android:layout_toRightOf="@+id/checkBox"
        android:layout_alignRight="@+id/Password"
        android:text="@string/save"
        android:onClick="SaveAccount"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:id="@+id/checkBox"
        android:layout_alignTop="@+id/saveButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/Password"
        android:onClick="showPassword"/>

    <Switch
        android:id="@+id/switchNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toggleNotifications"
        android:text="@string/notifications"
        android:textSize="20sp"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchNotifications">

            <ImageView
                android:id="@+id/ledColour"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:onClick="LedSettings"
                android:scaleType="fitCenter"
                android:layout_weight="1"/>

        <View
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#0C000000"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vibration"
            android:clickable="true"
            android:onClick="notificationVibrate"/>

        <View
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#0C000000"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_action_volume_on"
            android:scaleType="fitCenter"
            android:onClick="notificationSound"/>




    </LinearLayout>

</RelativeLayout>
