<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/LastUpdate"
            android:layout_marginTop="4dp"
            android:textColor="@color/abc_search_url_text_holo"
            android:freezesText="true"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/katie_lee"
            android:textSize="34sp"
            android:typeface="normal" />

        <ProgressBar
            android:id="@+id/P1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:keepScreenOn="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/KatieLee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/washer"
            android:textSize="24sp"
            android:visibility="visible"
            android:freezesText="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/new_old_hall"
            android:textSize="34sp"
            android:typeface="normal" />

        <ProgressBar
            android:id="@+id/P2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:keepScreenOn="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/NewOldHall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/washer"
            android:textSize="24sp"
            android:visibility="visible"
            android:freezesText="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/talbot"
            android:textSize="34sp"
            android:typeface="normal" />

        <ProgressBar
            android:id="@+id/P3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:keepScreenOn="true"
            android:visibility="gone"
            />

        <TextView
            android:freezesText="true"
            android:id="@+id/Talbot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/washer"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>


</ScrollView>