<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:visibility="visible"
        android:textColor="#8a000000"
        android:textSize="12sp"
        android:text="@string/retweeted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/retweet"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/screenName"
        android:layout_alignStart="@+id/screenName" />

    <ImageView
        android:contentDescription="@string/profile_picture"
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/retweet"
        android:layout_margin="5dp"
        android:background="#193658"
        android:minHeight="48px"
        android:minWidth="48px" />

    <TextView
        android:id="@+id/screenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retweet"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/profilePicture"
        android:textSize="20sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/handle"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/screenName"
        android:layout_marginLeft="5dp"
        android:layout_toLeftOf="@+id/time"
        android:layout_toRightOf="@+id/screenName"
        android:textColor="#8a000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/screenName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:textColor="#8a000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tweetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/retweet"
        android:layout_below="@+id/screenName"
        android:layout_margin="5dp"
        android:textSize="14sp" />

    <ImageView
        android:contentDescription="@string/tweeted_image"
        android:id="@+id/tweetImage"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/screenName"
        android:layout_below="@+id/tweetText"
        android:layout_alignRight="@+id/time"
        android:layout_marginBottom="5dp" />

</RelativeLayout>