<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
>
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <TextView
            android:id="@+id/Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/started"
            android:textColor="@color/abc_search_url_text_holo"
            android:freezesText="true"/>

        <RelativeLayout
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:keepScreenOn="true"
                />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            android:layout_marginBottom="8dp"
            >


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:textColor="#de000000"
                    android:id="@+id/AccountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/account_balance"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <View
                    android:layout_below="@+id/AccountTitle"
                    android:background="#1f000000"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"/>

                <TextView
                    android:layout_marginTop="2dp"
                    android:padding="8dp"
                    android:id="@+id/AccountBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/AccountTitle"
                    android:gravity="left"
                    android:text="@string/pound"
                    android:textSize="20sp"
                    android:freezesText="true"/>

                <TextView
                    android:id="@+id/DateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/AccountBalance"
                    android:gravity="left"
                    android:padding="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/last_updated"
                    android:textSize="14sp"
                    android:textColor="#8C000000"
                    />

                <TextView
                    android:textColor="#8C000000"
                    android:id="@+id/DateBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/DateTitle"
                    android:layout_toRightOf="@id/DateTitle"
                    android:gravity="left"
                    android:text="@string/never_updated"
                    android:textSize="14sp"
                    android:freezesText="true" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/card_view2">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp">

                <TextView
                    android:textColor="#de000000"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:id="@+id/TokenTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/token_balance"/>

                <View
                    android:layout_below="@+id/TokenTitle"
                    android:background="#1f000000"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"/>

                <TextView
                    android:layout_marginTop="2dp"
                    android:padding="8dp"
                    android:text="@string/pound"
                    android:id="@+id/TokenBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TokenTitle"
                    android:gravity="left"
                    android:textSize="20sp"
                    android:freezesText="true"/>


                <TextView
                    android:id="@+id/DateTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TokenBalance"
                    android:gravity="left"
                    android:padding="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/last_updated"
                    android:textSize="14sp"
                    android:textColor="#8C000000"
                    />

                <TextView
                    android:textColor="#8C000000"
                    android:id="@+id/DateBalance2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/DateTitle2"
                    android:layout_toRightOf="@id/DateTitle2"
                    android:gravity="left"
                    android:text="@string/never_updated"
                    android:textSize="14sp"
                    android:freezesText="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/card_view3"
            >

            <LinearLayout
                android:id="@+id/transactionList"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp">

                <TextView
                    android:text="Last Ten Transactions"
                    android:padding="8dp"
                    android:textColor="#de000000"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_below="@+id/TokenTitle"
                    android:background="#1f000000"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="2dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>